--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="Esercizio Scooter Lim.css">
+        <link rel="stylesheet" href="file.css">
     </head>
     <body>
          <header>
